[gd_scene load_steps=4 format=1]

[ext_resource path="res://Battle/Battle.gd" type="Script" id=1]
[ext_resource path="res://Battle/BattleMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mobs/Mob.tscn" type="PackedScene" id=3]

[node name="Battle" type="Node2D"]

script/script = ExtResource( 1 )

[node name="BattleControl" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 288.0

[node name="BattleCamera" type="Camera2D" parent="BattleControl"]

offset = Vector2( 160, 145 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="BattleBackground" type="ColorFrame" parent="BattleControl"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 288.0
color = Color( 1, 1, 1, 1 )

[node name="BattlePlayerSprite" type="Sprite" parent="BattleControl/BattleBackground"]

transform/pos = Vector2( 72, 184 )
transform/scale = Vector2( 1.5, 1.5 )

[node name="BattleMenu" parent="BattleControl" instance=ExtResource( 2 )]

margin/top = 218.0
margin/bottom = 258.0

[node name="BattleMob" parent="." instance=ExtResource( 3 )]


